# dicfilter

./: Cargo.toml  README.md  filter.txt
.github/workflows/: ci.yml  release.yml
src/: cli.rs  filter.rs  gui.rs  main.rs
